pre tag word-wrap and comma fix

--- a/ruqqus/assets/style/board_dark.scss
+++ b/ruqqus/assets/style/board_dark.scss
@@ -163,11 +163,19 @@ p {
     font-size: 14px;
 }
 
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: $black;
 }
 
-#settings #submit {
+#settings, #submit {
     padding-top: 98px;
 }
 
